# crypto-finder

./: .gitignore  README.md  main.py  pyproject.toml
app/config/: settings.py
app/core/: __init__.py  data_processor.py
app/data_collection/: web_parser.py
app/framework/: get_html.py
app/ui/: main_window.py
app/ui/pages/: dataset_page.py  start_page.py
app/ui/utils/: change_page.py  configure_grid.py
app/ui/widgets/: create_button.py  create_title.py
config/: settings.py
core/: data_cleaner.py  data_processor.py  delete_dataset.py
data_collection/: __init__.py  api_collector.py  web_parser.py
documentation/: User manual.docx  User manual.md  developer.md
framework/: __init__.py  get_html.py
math/: graphs.py
ui/: main_window.py  widgets.py
ui/pages/: dataset_page.py  start_page.py
ui/widgets/display_dataframe/: display_dataframe.py
