[project]
name = "pythonproject"
version = "0.1.0"
description = "The project to detect listing of cryptocurrency"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas==2.3.0",
    "numpy==2.3.0",
    "requests>=2.32.4",
    "playwright==1.52.0",
    "beautifulsoup4>=4.13.4",
]
